# cmd/main.go
@@ -9,26 +9,30 @@ import (
 	_ "github.com/lib/pq"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"github.com/zykunov/timeTracker/models"
-	"github.com/zykunov/timeTracker/routers"
-	"github.com/zykunov/timeTracker/storage"
+	"github.com/zykunov/bankAPI/models"
+	"github.com/zykunov/bankAPI/routers"
+	"github.com/zykunov/bankAPI/storage"
 	"gorm.io/driver/postgres"
 	"gorm.io/gorm"
 
-	_ "github.com/zykunov/timeTracker/docs"
+	_ "github.com/zykunov/bankAPI/docs"
 )
 
-// @title           time tracker
+// @title           utm api
 // @version         1.0
-// @description     REST API учета времени задач по пользователям
+// @description     REST API
 
 // @contact.name   Igor Zykunov
 
 // @host      localhost:8080
-// @BasePath  /api/v1
+// @BasePath  /
 
 var err error
 
+// Логгер
+var Logger = log.New(os.Stdout, "[BankAPI] ", 2)
+
+// Подгрузка конфигурации подключения к БД
 func init() {
 	if err := godotenv.Load("config/.env"); err != nil {
 		log.Print("No .env file found")
@@ -45,13 +49,14 @@ func main() {
 
 	dsn := fmt.Sprintf("host=%s user=%s dbname=%s password=%s sslmode=%s", host, user, dbname, password, sslmode)
 
+	// Подключение к БД
 	storage.DB, err = gorm.Open(postgres.Open(dsn), &gorm.Config{})
 
 	if err != nil {
 		log.Println("error while accesing DB", err)
 	}
-
-	storage.DB.AutoMigrate(&models.User{}, &models.Task{})
+	// Создание таблицы account
+	storage.DB.AutoMigrate(&models.Account{})
 
 	r := routers.SetupRouter()
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
